--- a/Debugging/Debugging.csproj
+++ b/Debugging/Debugging.csproj
@@ -55,9 +55,14 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>EvReport.ev</LastGenOutput>
     </None>
+    <None Include="EvReportVB.ev">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EvReportVB.tt</DependentUpon>
+    </None>
     <None Include="EvReportVB.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>EvReportVB.txt</LastGenOutput>
+      <LastGenOutput>EvReportVB.ev</LastGenOutput>
     </None>
     <None Include="Sample.visualEv" />
     <None Include="Sample.visualEv.diagram">
@@ -70,13 +75,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4df5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="EvReportVB.txt">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>EvReportVB.tt</DependentUpon>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
