--- a/Debugging/Debugging.csproj
+++ b/Debugging/Debugging.csproj
@@ -32,7 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Modeling.Sdk.14.0, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.Modeling.Sdk.Diagrams.14.0, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -44,6 +47,10 @@
       <Link>EvSchema.xsd</Link>
       <SubType>
       </SubType>
+    </None>
+    <None Include="Sample.visualEv" />
+    <None Include="Sample.visualEv.diagram">
+      <DependentUpon>Sample.visualEv</DependentUpon>
     </None>
     <None Include="EvReport.ev">
       <AutoGen>True</AutoGen>
@@ -63,10 +70,6 @@
     <None Include="EvReportVB.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>EvReportVB.ev</LastGenOutput>
-    </None>
-    <None Include="Sample.visualEv" />
-    <None Include="Sample.visualEv.diagram">
-      <DependentUpon>Sample.visualEv</DependentUpon>
     </None>
     <None Include="Test.visualEv" />
     <None Include="Test.visualEv.diagram">
